added resume link for download

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/chetan.jpg" alt="Image"/></a></div>
           <div class="h2 title">Chetan N</div>
-          <p class="category text-white">FULL STACK DEVELOPER</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">FULL STACK DEVELOPER</p>
+          <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
+          <a class="btn btn-primary" href="https://N-Chetan.github.io/Chetan-N/Chetan_2023_Resume.pdf" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
@@ -81,7 +83,6 @@
                 <li>Having significant experience working in Aerospace ,BFSI and Education domain.</li>
               </ul>
               </p>
-               <!-- <a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a></p> -->
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
